# so-project

./: .gitignore  CMakeLists.txt  README.md  patch.patch  raport.md
include/: config.h  constants.h  lifecycle.h  logger.h  processinfo.h  validators.h
include/candidate/: CandidateConfig.h  CandidateFactory.h  CandidateProcess.h
include/commission/: CommissionProcess.h
include/common/ipc/: CandidateInfo.h  CommissionInfo.h  MutexWrapper.h  SemaphoreManager.h  SharedMemoryManager.h  SharedState.h
include/common/output/: Logger.h  ResultsWriter.h
include/common/process/: BaseProcess.h  ProcessRegistry.h
include/common/utils/: Memory.h  Misc.h  Random.h  Time.h
include/dean/: DeanConfig.h  DeanProcess.h
include/ipc/: CandidateMessage.h  MessageQueueManager.h  MessageType.h  SemaphoreManager.h  SemaphoreOperations.h  SharedMemoryManager.h
include/main/: MainProcess.h
include/output/: Logger.h  ResultsWriter.h
include/utils/: constants.h  random.h  validation.h
output/: lista_rankingowa.txt  results.csv
scripts/: build_and_run.sh  format-cpp.sh
src/: config.cpp  lifecycle.cpp  logger.cpp  main.cpp  processinfo.cpp  validators.cpp
src/candidate/: CandidateFactory.cpp  CandidateProcess.cpp  main.cpp
src/commission/: CommissionProcess.cpp  main.cpp
src/common/ipc/: MutexWrapper.cpp  SemaphoreManager.cpp  SharedMemoryManager.cpp
src/common/output/: Logger.cpp  ResultsWriter.cpp
src/common/process/: BaseProcess.cpp  ProcessRegistry.cpp
src/common/utils/: Memory.cpp  Misc.cpp  Random.cpp  Time.cpp
src/dean/: DeanConfig.cpp  DeanProcess.cpp  main.cpp
src/ipc/: MessageQueueManager.cpp  SemaphoreManager.cpp  SharedMemoryManager.cpp
src/main/: MainProcess.cpp  main.cpp
src/output/: Logger.cpp  ResultsWriter.cpp
src/utils/: constants.cpp  random.cpp  validation.cpp
